2003-10-04 14:27  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/path.m (-DPSrectclip::::): Move the call to -DPSnewpath
	so it gets called on all paths through the method.

2003-10-03  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Use -Wl for netbsd linker options.

2003-10-02  Adam Fedor  <fedor@gnu.org>

	* Source/xlib/XGGState.m (-DPSrectclip::::): Clear path.
	* Source/winlib/WIN32GState.m (-DPSrectclip::::): Idem.
	* Source/art/path.m (-DPSrectclip::::): Idem.

2003-09-30  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSGState.m ([GSGState -DPSrectclip::::]): Clear
	the current path after clipping.

2003-09-29  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.0

2003-09-22 13:03  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/image.m (-_image_do_rgb_transform:::): Check if the
	coordinates involved are too large to handle normally. If they
	are, scale down the numbers a bit (gives less accuracy, but no
	overflow).

2003-09-20  Adam Fedor  <fedor@gnu.org>

	* Headers/xlib/XGGState.h: Add GSReadRect def.
	* Headers/xlib/XGPrivate.h: Add _pixmap_read_alpha def.
	* Source/xlib/XGBitmap.m (_pixmap_read_alpha): Implement.
	* Source/xlib/XGGstate.m (-GSReadRect:): Idem.

2003-09-15  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSGState.m ([GSGState -deepen]): Typo fix - copy
	textCtm (reported by Banlu Kemiyatorn <id@project-ile.net>).

2003-09-09  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSContext.m (-DPSsetgstate:): Copy gstate so we
	don't modify original.

2003-09-08 01:39  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/blit.m (artcontext_setup_draw_info): Add some debug
	logging.

2003-09-03  Adam Fedor  <fedor@gnu.org>

	* Source/xdps/GNUmakefile: include config.make (patch from
	Aredridel <aredridel@nbtsc.org>).

2003-09-02  Adam Fedor  <fedor@gnu.org>

	* Tools/gpbs.m (init): Don't mess with file descriptors on MinGW.

2003-09-02  Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m