@@ -537,40 +537,3 @@ RMakeTiledImage(RImage *tile, unsigned width, unsigned height)
     }
     return image;
 }
-
-
-RImage*
-RMakeCenteredImage(RImage *image, unsigned width, unsigned height, RColor *color)
-{
-    int x, y, w, h, sx, sy;
-    RImage *tmp;
-
-    tmp = RCreateImage(width, height, False);
-    if (!tmp) {
-        return NULL;
-    }
-
-    RClearImage(tmp, color);
-
-    if (image->height < height) {
-        h = image->height;
-        y = (height - h)/2;
-        sy = 0;
-    } else {
-        sy = (image->height - height)/2;
-        y = 0;
-        h = height;
-    }
-    if (image->width < width) {
-        w = image->width;
-        x = (width - w)/2;
-        sx = 0;
-    } else {
-        sx = (image->width - width)/2;
-        x = 0;
-        w = width;
-    }
-    RCombineArea(tmp, image, sx, sy, w, h, x, y);
-
-    return tmp;
-}
